fix(pom):  BOM version

--- a/plugin-modernizer-core/src/main/resources/versions.properties
+++ b/plugin-modernizer-core/src/main/resources/versions.properties
@@ -1,2 +1,3 @@
 openrewrite.maven.plugin.version = ${openrewrite.maven.plugin.version}
 jenkins.version = ${jenkins.version}
+bom.version = ${bom.version}
