fix(pom):  BOM base

--- a/plugin-modernizer-core/src/main/resources/versions.properties
+++ b/plugin-modernizer-core/src/main/resources/versions.properties
@@ -1,3 +1,4 @@
 openrewrite.maven.plugin.version = ${openrewrite.maven.plugin.version}
 jenkins.version = ${jenkins.version}
 bom.version = ${bom.version}
+bom.base = ${bom.base}
