feat(recipes): Add the ModernizeJenkinsfile recipe, and its UpgradeNextMajorParentVersion dependency.

--- a/plugin-modernizer-core/src/main/resources/META-INF/rewrite/recipes.yml
+++ b/plugin-modernizer-core/src/main/resources/META-INF/rewrite/recipes.yml
@@ -181,3 +181,12 @@ recipeList:
       filePattern: updatecli/values.yml
   - org.openrewrite.DeleteSourceFiles:
       filePattern: updatecli/**/*.yml
+---
+type: specs.openrewrite.org/v1beta/recipe
+name: io.jenkins.tools.pluginmodernizer.AddJenkinsFile
+displayName: Add Jenkinsfile
+description: Updates Jenkinsfile to build with recommended Java versions, platforms, and settings., or creates the file is absent.
+tags: ['chore']
+recipeList:
+  - org.openrewrite.jenkins.ModernizeJenkinsfile
+  - io.jenkins.tools.pluginmodernizer.UpgradeNextMajorParentVersion
