--- a/plugin-modernizer-core/src/main/resources/META-INF/rewrite/recipes.yml
+++ b/plugin-modernizer-core/src/main/resources/META-INF/rewrite/recipes.yml
@@ -185,8 +185,8 @@ recipeList:
 type: specs.openrewrite.org/v1beta/recipe
 name: io.jenkins.tools.pluginmodernizer.AddOrModernizeJenkinsFile
 displayName: Add Jenkinsfile
-description: Updates Jenkinsfile to build with recommended Java versions, platforms, and settings, or creates the file if absent. Also upgrades to the next parent major version, as the new version of the Jenkinsfille uses JDK17 and JDK21.
+description: Updates Jenkinsfile to build with recommended Java versions, platforms, and settings, or creates the file if absent. Also upgrades to a newer parent version, as the new version of the Jenkinsfille uses JDK17 and JDK21.
 tags: ['chore']
 recipeList:
   - org.openrewrite.jenkins.ModernizeJenkinsfile
-  - io.jenkins.tools.pluginmodernizer.UpgradeNextMajorParentVersion
+  - io.jenkins.tools.pluginmodernizer.UpgradeParentVersion
