--- a/.github/workflows/github-docker-registry-push.yml
+++ b/.github/workflows/github-docker-registry-push.yml
@@ -60,7 +60,7 @@ jobs:
 
       # Build the project with Maven and install dependencies in the Docker context
       - name: Build with Maven and install dependencies in the Docker context
-        run: mvn --version && mvn clean install && cp -vraxu ~/.m2 .m2
+        run: mvn clean install && cp -vraxu ~/.m2 .m2
         env:
           MAVEN_CACHE: ${{ env.MAVEN_CACHE_PATH }}
 
