Add XML declaration to Jelly files
Fixes #51

Add a new recipe to ensure the XML declaration is present in all Jelly files.

* Add `AddJellyXmlDeclaration` recipe to `plugin-modernizer-core/src/main/resources/META-INF/rewrite/recipes.yml`.
* Create `AddJellyXmlDeclaration` class in `plugin-modernizer-core/src/main/java/io/jenkins/tools/pluginmodernizer/core/recipe/AddJellyXmlDeclaration.java`.
* Implement logic to add XML declaration to existing `.jelly` files using `PlainTextVisitor`.
* Create `AddJellyXmlDeclarationTest` class in `plugin-modernizer-core/src/test/java/io/jenkins/tools/pluginmodernizer/core/recipe/AddJellyXmlDeclarationTest.java`.
* Write unit tests to verify the `AddJellyXmlDeclaration` recipe.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/gounthar/plugin-modernizer-tool/issues/51?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/plugin-modernizer-core/src/main/resources/META-INF/rewrite/recipes.yml
+++ b/plugin-modernizer-core/src/main/resources/META-INF/rewrite/recipes.yml
@@ -201,3 +201,11 @@ recipeList:
             interval: monthly
       relativeFileName: .github/dependabot.yml
       overwriteExisting: false
+---
+type: specs.openrewrite.org/v1beta/recipe
+name: io.jenkins.tools.pluginmodernizer.AddJellyXmlDeclaration
+displayName: Add XML declaration to Jelly files
+description: Ensure the XML declaration `<?jelly escape-by-default='true'?>` is present in all `.jelly` files.
+tags: ['chore']
+recipeList:
+  - io.jenkins.tools.pluginmodernizer.core.recipe.AddJellyXmlDeclaration
