fix(jelly): Uses the new FixJellyIssues recipe from the openrewrite rewrite-jenkins subproject.

--- a/plugin-modernizer-core/src/main/resources/META-INF/rewrite/recipes.yml
+++ b/plugin-modernizer-core/src/main/resources/META-INF/rewrite/recipes.yml
@@ -206,9 +206,10 @@ recipeList:
       overwriteExisting: false
 ---
 type: specs.openrewrite.org/v1beta/recipe
-name: io.jenkins.tools.pluginmodernizer.AddJellyXmlDeclaration
-displayName: Add XML declaration to Jelly files
-description: Ensure the XML declaration `<?jelly escape-by-default='true'?>` is present in all `.jelly` files.
+name: io.jenkins.tools.pluginmodernizer.FixJellyIssues
+displayName: Add XML declaration to Jelly files and create index.jelly if it doesn't exist
+description: Ensure the XML declaration `<?jelly escape-by-default='true'?>` is present in all `.jelly` files and create index.jelly if it doesn't exist.
 tags: ['chore']
 recipeList:
-  - io.jenkins.tools.pluginmodernizer.core.recipe.AddJellyXmlDeclaration
+  - org.openrewrite.jenkins.CreateIndexJelly
+  - org.openrewrite.jenkins.AddJellyXmlDeclaration
