--- a/updatecli/updatecli.d/gson-api.yaml
+++ b/updatecli/updatecli.d/gson-api.yaml
@@ -31,7 +31,7 @@ targets:
     spec:
       engine: "yamlpath"
       file: ./plugin-modernizer-core/src/main/resources/META-INF/rewrite/recipes.yml
-      key: "recipeList[?(@['org.openrewrite.jenkins.ReplaceLibrariesWithApiPlugin'].pluginArtifactId == 'gson-api')]['org.openrewrite.jenkins.ReplaceLibrariesWithApiPlugin'].pluginVersion"
+      key: "$.recipeList[?(@['org.openrewrite.jenkins.ReplaceLibrariesWithApiPlugin'].pluginArtifactId == 'gson-api')]['org.openrewrite.jenkins.ReplaceLibrariesWithApiPlugin'].pluginVersion"
     sourceid: latestGsonApiVersion
     scmid: default
 
